Issue #685 - Fixed: Acceptable Ads checkboxes misaligned in RTL environment on older browsers

--- a/css/desktop-options.scss
+++ b/css/desktop-options.scss
@@ -952,13 +952,16 @@ html[dir="rtl"] #acceptable-ads ul
 #acceptable-ads ul button
 {
   position: absolute;
+}
+
+html[dir="ltr"] button
+{
   left: 0rem;
 }
 
 html[dir="rtl"] button
 {
   right: 0rem;
-  left: auto;
 }
 
 #acceptable-ads label
